[gd_scene load_steps=7 format=2]

[ext_resource path="res://graphics/campfireStrip.png" type="Texture" id=1]
[ext_resource path="res://CampFire.gd" type="Script" id=2]
[ext_resource path="res://graphics/campfireFlame.png" type="Texture" id=3]
[ext_resource path="res://graphics/campfireRange.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]

length = 0.5
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("campfireFlame:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 137.06

[node name="CampFire" type="Sprite"]

position = Vector2( 577.46, 301.166 )
texture = ExtResource( 1 )
hframes = 3
frame = 1
script = ExtResource( 2 )
_sections_unfolded = [ "Animation" ]
__meta__ = {
"_edit_group_": true
}

[node name="campfireFlame" type="Sprite" parent="."]

position = Vector2( 0.517944, -18.0927 )
texture = ExtResource( 3 )
hframes = 2
_sections_unfolded = [ "Animation" ]

[node name="campfireRange" type="Sprite" parent="."]

scale = Vector2( 1.4, 1.4 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback_process_mode = 1
playback_default_blend_time = 0.0
root_node = NodePath("..")
anims/FlameFlicker = SubResource( 1 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "FlameFlicker"

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = true

[node name="Area2D" type="Area2D" parent="."]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

visible = false
shape = SubResource( 2 )
_sections_unfolded = [ "Transform" ]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]

[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]


